Adding initial jeliasson-test1

--- a/redwood.toml
+++ b/redwood.toml
@@ -6,10 +6,10 @@
 # https://redwoodjs.com/docs/app-configuration-redwood-toml
 
 [web]
-  title = "Redwood App"
+  title = "Redwood App - testing Docker implementations"
   port = 8910
-  apiProxyPath = "/.redwood/functions"
-  includeEnvironmentVariables = [] # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
+  apiProxyPath = "/api"             # Use /api as default api entrypoint
+  includeEnvironmentVariables = []  # any ENV vars that should be available to the web side, see https://redwoodjs.com/docs/environment-variables#web
 [api]
   port = 8911
 [browser]
