--- a/.github/workflows/jeliasson-test1.yml
+++ b/.github/workflows/jeliasson-test1.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          username: jeliasson
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
