--- a/docker/jeliasson-nginx/api/Dockerfile
+++ b/docker/jeliasson-nginx/api/Dockerfile
@@ -42,6 +42,5 @@ EXPOSE 8911
 # Entrypoint to @redwoodjs/api-server binary
 ENTRYPOINT [ "yarn", "rw", "serve", "api", "--port", "8911", "--rootPath", "/api" ]
 
-### START General copy pasta for all implementations
+### Connect image to repository
 LABEL org.opencontainers.image.source=https://github.com/jeliasson/redwoodjs-docker
-### END of general copy pasta for all implementations
