--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "0.36.4"
+    "@redwoodjs/core": "0.49.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
     "root": true
   },
   "engines": {
-    "node": "14.x",
-    "yarn": "1.x"
+    "node": ">=14.17 <=16.x",
+    "yarn": ">=1.15 <2"
+  },
+  "prisma": {
+    "seed": "yarn rw exec seed"
   }
 }
