--- a/docker/standal-ce-nginx/api/Dockerfile
+++ b/docker/standal-ce-nginx/api/Dockerfile
@@ -9,7 +9,6 @@ COPY yarn.lock yarn.lock
 
 COPY redwood.toml redwood.toml
 COPY graphql.config.js graphql.config.js
-COPY babel.config.js babel.config.js
 
 COPY api/package.json api/package.json
 COPY web/package.json web/package.json
@@ -33,8 +32,8 @@ RUN chown -R node /app
 
 COPY api/package.json .
 
-RUN yarn install && \
-    yarn global add @redwoodjs/api-server @redwoodjs/internal
+RUN yarn install &&
+  yarn global add @redwoodjs/api-server @redwoodjs/internal
 
 COPY graphql.config.js .
 COPY redwood.toml .
