--- a/docker/standal-ce-nginx/api/Dockerfile
+++ b/docker/standal-ce-nginx/api/Dockerfile
@@ -50,4 +50,4 @@ ENTRYPOINT [ "rw-api-server" ]
 CMD []
 
 ### Connect image to repository
-LABEL org.opencontainers.image.source=https://github.com/jeliasson/redwoodjs-docker
+LABEL org.opencontainers.image.source=https://github.com/redwoodjs/docker
