--- a/docker/standal-ce-nginx/web/Dockerfile
+++ b/docker/standal-ce-nginx/web/Dockerfile
@@ -45,4 +45,4 @@ EXPOSE 8910
 USER nginx
 
 ### Connect image to repository
-LABEL org.opencontainers.image.source=https://github.com/jeliasson/redwoodjs-docker
+LABEL org.opencontainers.image.source=https://github.com/redwoodjs/docker
