--- a/.github/workflows/standal-cli-both.yml
+++ b/.github/workflows/standal-cli-both.yml
@@ -6,7 +6,6 @@ on:
     branches:
       - main
       - standal-cli-both
-      - temp
 
     paths:
       # Implementation specific
@@ -52,7 +51,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: jeliasson
+          username: thedavidprice
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
@@ -65,5 +64,5 @@ jobs:
             NODE_ENV=${{ env.NODE_ENV }}
             RUNTIME_ENV=${{ env.RUNTIME_ENV }}
           tags: |
-            ghcr.io/jeliasson/${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:latest
-            ghcr.io/jeliasson/${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:${{ github.sha }}
+            ghcr.io/redwoodjs/docker-${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:latest
+            ghcr.io/redwoodjs/docker-${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:${{ github.sha }}
