fix(ci): updating Dockerfiles and nginx config

--- a/docker/jeliasson-nginx/api/Dockerfile
+++ b/docker/jeliasson-nginx/api/Dockerfile
@@ -1,45 +1,77 @@
 ###########################################################################################
-# Runner: node
+# Base
 ###########################################################################################
 
-FROM node:14-alpine as runner
-
-# Node
-ARG NODE_ENV
-ARG RUNTIME_ENV
-ENV NODE_ENV=$NODE_ENV
-ENV RUNTIME_ENV=$RUNTIME_ENV
-
-# Set workdir
+FROM node:14-alpine as base
 WORKDIR /app
 
-COPY api api
-COPY .nvmrc .
-COPY graphql.config.js .
+ARG NODE_ENV
+ENV NODE_ENV=$NODE_ENV
+ENV RUNTIME_ENV=$RUNTIME_ENV
+ARG RUNTIME_ENV
+ARG DATABASE_URL
+ENV DATABASE_URL=$DATABASE_URL
+
+# Copy
+COPY api/package.json api/package.json
+COPY web/package.json web/package.json
 COPY package.json .
-COPY redwood.toml .
 COPY yarn.lock .
+COPY redwood.toml .
+COPY graphql.config.js .
+COPY .env.defaults .
+COPY .yarn .yarn
+COPY .yarnrc.yml .
 
 # Install dependencies
-RUN yarn install --frozen-lockfile
+RUN yarn install
 
-# Install additional dependencies (tracking realStandal)
-RUN yarn add react react-dom @redwoodjs/api-server @redwoodjs/internal --ignore-workspace-root-check
+###########################################################################################
+# Build
+###########################################################################################
+
+FROM base as build
+
+# Copy
+COPY api api
+COPY scripts scripts
 
 # Build
 RUN yarn rw build api
 
-# Clean up
-RUN rm -rf ./api/src
+# Set database baseline
+# We only need to do this once per database
+# RUN yarn rw prisma migrate resolve --applied 20210311161829_baseline0
 
-# Set api as workdirectory
-WORKDIR /app/api
+# Migrate database
+RUN yarn rw prisma migrate deploy
 
-# Expose RedwoodJS api port
+# Seed database
+RUN yarn rw prisma db seed
+
+###########################################################################################
+# Runner
+###########################################################################################
+
+FROM node:14-alpine
+WORKDIR /app
+
+# Copy
+COPY --from=build /app/api/dist /app/api/dist
+COPY --from=build /app/node_modules/.prisma /app/node_modules/.prisma
+COPY api/package.json .
+COPY graphql.config.js .
+COPY redwood.toml .
+COPY .env.defaults .
+#COPY .yarn .yarn     # @todo: Fix issue with @prisma/client missing when using yarn 3.x
+#COPY .yarnrc.yml .   # @todo: Fix issue with @prisma/client missing when using yarn 3.x
+
+# Install dependencies
+RUN yarn install
+
+# Install additional dependencies
+RUN yarn add @redwoodjs/api-server @redwoodjs/internal
+
 EXPOSE 8911
-
-# Entrypoint to @redwoodjs/api-server binary
-ENTRYPOINT [ "yarn", "rw", "serve", "api", "--port", "8911", "--rootPath", "/api" ]
-
-### Connect image to repository
-LABEL org.opencontainers.image.source=https://github.com/redwoodjs/docker
+CMD []
+ENTRYPOINT [ "yarn", "rw-server", "--port", "8911" ]
