--- a/docker/jeliasson-nginx/web/config/nginx.conf
+++ b/docker/jeliasson-nginx/web/config/nginx.conf
@@ -1,24 +1,36 @@
 server {
     listen 8910 default_server;
-    root /usr/share/nginx/html;
+    root /app/web/dist;
 
-    # 1 hour cache for css and js
+    # Add global header
+    add_header X-Awesomeness 9000;
+
+    # Cache css and js
     location ~* \.(?:css|js)$ {
-        expires 1h;
-        add_header Pragma public;
-        add_header Cache-Control "public";
-        access_log off;
-    }
-
-    # 7 days cache for image assets
-    location ~* \.(?:ico|gif|jpe?g|png)$ {
         expires 7d;
         add_header Pragma public;
         add_header Cache-Control "public";
         access_log off;
     }
 
+    # Cache static
+    location ~* \.(?:jpg|jpeg|gif|png|webp|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+        expires 1d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+        access_log off;
+    }
+
+    # Cache fonts
+    location ~* \.(?:woff|woff2|ttf|otf|eot)$ {
+        expires 30d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+        access_log off;
+    }
+
     location / {
+        expires -1;
         try_files $uri $uri/ /index.html;
     }
 }
