--- a/.github/workflows/standal-cli-both.yml
+++ b/.github/workflows/standal-cli-both.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: thedavidprice
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
