--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -60,7 +60,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          username: thedavidprice
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
