--- a/.github/workflows/standal-ce-nginx.yml
+++ b/.github/workflows/standal-ce-nginx.yml
@@ -6,6 +6,7 @@ on:
     # Only run on these branches
     branches:
       - main
+      - ci/**
       - standal-ce-nginx
 
     paths:
@@ -54,7 +55,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: thedavidprice
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
