--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -12,6 +12,7 @@ on:
     # Only run on these branches
     branches:
       #- main
+      - ci/**
       - template-branch
 
     paths:
@@ -60,7 +61,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: thedavidprice
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
 
       - name: Docker build
