--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -4,7 +4,7 @@
 # Copy this file and enable main branch (which is commented out in template)
 #
 
-name: 'jeliasson-nginx'
+name: 'template-branch'
 
 on:
   push:
@@ -12,7 +12,6 @@ on:
     # Only run on these branches
     branches:
       #- main
-      - ci/**
       - template-branch
 
     paths:
@@ -76,3 +75,42 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/docker-${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:latest
             ghcr.io/${{ github.repository_owner }}/docker-${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:${{ github.sha }}
+
+  #
+  # Analyse
+  #
+  analyze:
+    name: Analyse
+    needs: [build]
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [api, web]
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v1
+
+      - name: Docker login
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
+
+      - name: Install dependencies
+        run: |
+          wget https://github.com/wagoodman/dive/releases/download/v0.9.2/dive_0.9.2_linux_amd64.deb
+          sudo apt install ./dive_0.9.2_linux_amd64.deb
+
+      - name: Run Dive
+        run: |
+          CI=true dive ghcr.io/${{ github.repository_owner }}/docker-${{ env.IMAGE_PREFIX }}-${{ matrix.platform }}-${{ env.RUNTIME_ENV }}:${{ github.sha }}
+
+      - name: Image size
+        run: |
+          docker images | egrep '^.*SIZE|docker\-.*'
