--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "1.5.1",
-    "@redwoodjs/graphql-server": "1.5.1"
+    "@redwoodjs/api": "^2.2.3",
+    "@redwoodjs/graphql-server": "^2.2.3"
   }
 }
