--- a/docker/pi0neerpat-packages/api/Dockerfile
+++ b/docker/pi0neerpat-packages/api/Dockerfile
@@ -17,6 +17,11 @@ COPY packages packages
 COPY redwood.toml .
 COPY graphql.config.js .
 
+# Fix error 'Error: Unable to establish a connection to query-engine-node-api library.''
+# @see: https://github.com/prisma/prisma/issues/16553#issuecomment-1353302617
+#       https://github.com/prisma/prisma/issues/14073#issuecomment-1348534199
+RUN apk add --update --no-cache openssl1.1-compat
+
 # React is needed for building the api package for some reason
 RUN yarn install --frozen-lockfile
 # RUN yarn add -W react react-dom
