--- a/.github/workflows/pi0neerpat-packages.yml
+++ b/.github/workflows/pi0neerpat-packages.yml
@@ -21,6 +21,9 @@ on:
       - 'redwood.toml'
       - 'yarn.lock'
 
+      # Generic
+      - '.yarn/releases/**'
+
 env:
   # Environment variable
   NODE_ENV: 'development'
