--- a/.github/workflows/standal-ce-nginx.yml
+++ b/.github/workflows/standal-ce-nginx.yml
@@ -23,6 +23,9 @@ on:
       - 'redwood.toml'
       - 'yarn.lock'
 
+      # Generic
+      - '.yarn/releases/**'
+
 env:
 
   # Environment variable
